--- a/_modules/jaxprop/helpers_props.html
+++ b/_modules/jaxprop/helpers_props.html
@@ -7,7 +7,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>jaxprop.helpers_props &#8212; jaxprop v0.3.1 documentation</title>
+    <title>jaxprop.helpers_props &#8212; jaxprop v0.4.0 documentation</title>
   
   
   
@@ -37,7 +37,7 @@
 <link rel="preload" as="script" href="../../_static/scripts/pydata-sphinx-theme.js?digest=dfe6caa3a7d634c4db9b" />
   <script src="../../_static/vendor/fontawesome/6.5.2/js/all.min.js?digest=dfe6caa3a7d634c4db9b"></script>
 
-    <script src="../../_static/documentation_options.js?v=4d4cdd22"></script>
+    <script src="../../_static/documentation_options.js?v=6d25dc78"></script>
     <script src="../../_static/doctools.js?v=9a2dae69"></script>
     <script src="../../_static/sphinx_highlight.js?v=dc90522c"></script>
     <script>let toggleHintShow = 'Click to show';</script>
@@ -140,7 +140,7 @@
   
   
   
-    <p class="title logo__title">jaxprop v0.3.1 documentation</p>
+    <p class="title logo__title">jaxprop v0.4.0 documentation</p>
   
 </a></div>
         <div class="sidebar-primary-item">
@@ -484,7 +484,7 @@ document.write(`
     <span class="s2">&quot;speed_of_sound&quot;</span><span class="p">:</span> <span class="p">[</span><span class="s2">&quot;a&quot;</span><span class="p">,</span> <span class="s2">&quot;speed_sound&quot;</span><span class="p">],</span>
     <span class="s2">&quot;viscosity&quot;</span><span class="p">:</span> <span class="p">[</span><span class="s2">&quot;mu&quot;</span><span class="p">],</span>
     <span class="s2">&quot;conductivity&quot;</span><span class="p">:</span> <span class="p">[</span><span class="s2">&quot;k&quot;</span><span class="p">],</span>
-    <span class="s2">&quot;gruneisen&quot;</span><span class="p">:</span> <span class="p">[</span><span class="s2">&quot;gruneisen&quot;</span><span class="p">],</span>
+    <span class="s2">&quot;gruneisen&quot;</span><span class="p">:</span> <span class="p">[</span><span class="s2">&quot;gruneisen&quot;</span><span class="p">,</span> <span class="s2">&quot;G&quot;</span><span class="p">],</span>
     <span class="c1"># --- expansion &amp; JT effects</span>
     <span class="s2">&quot;isobaric_expansion_coefficient&quot;</span><span class="p">:</span> <span class="p">[</span><span class="s2">&quot;alpha_p&quot;</span><span class="p">],</span>
     <span class="s2">&quot;isothermal_joule_thomson&quot;</span><span class="p">:</span> <span class="p">[</span><span class="s2">&quot;mu_T&quot;</span><span class="p">],</span>
@@ -540,6 +540,10 @@ document.write(`
     <span class="s2">&quot;s&quot;</span><span class="p">:</span> <span class="s2">&quot;Entropy (J/kg/K)&quot;</span><span class="p">,</span>
     <span class="s2">&quot;T&quot;</span><span class="p">:</span> <span class="s2">&quot;Temperature (K)&quot;</span><span class="p">,</span>
     <span class="s2">&quot;h&quot;</span><span class="p">:</span> <span class="s2">&quot;Enthalpy (J/kg)&quot;</span><span class="p">,</span>
+    <span class="s2">&quot;pressure&quot;</span><span class="p">:</span> <span class="s2">&quot;Pressure (Pa)&quot;</span><span class="p">,</span>
+    <span class="s2">&quot;entropy&quot;</span><span class="p">:</span> <span class="s2">&quot;Entropy (J/kg/K)&quot;</span><span class="p">,</span>
+    <span class="s2">&quot;temperature&quot;</span><span class="p">:</span> <span class="s2">&quot;Temperature (K)&quot;</span><span class="p">,</span>
+    <span class="s2">&quot;enthalpy&quot;</span><span class="p">:</span> <span class="s2">&quot;Enthalpy (J/kg)&quot;</span><span class="p">,</span>
     <span class="s2">&quot;rho&quot;</span><span class="p">:</span> <span class="sa">r</span><span class="s2">&quot;Density (kg/m$^3$)&quot;</span><span class="p">,</span>
 <span class="p">}</span>
 
