--- a/genindex.html
+++ b/genindex.html
@@ -7,7 +7,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index &#8212; jaxprop v0.3.1 documentation</title>
+    <title>Index &#8212; jaxprop v0.4.0 documentation</title>
   
   
   
@@ -37,7 +37,7 @@
 <link rel="preload" as="script" href="_static/scripts/pydata-sphinx-theme.js?digest=dfe6caa3a7d634c4db9b" />
   <script src="_static/vendor/fontawesome/6.5.2/js/all.min.js?digest=dfe6caa3a7d634c4db9b"></script>
 
-    <script src="_static/documentation_options.js?v=4d4cdd22"></script>
+    <script src="_static/documentation_options.js?v=6d25dc78"></script>
     <script src="_static/doctools.js?v=9a2dae69"></script>
     <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
     <script>let toggleHintShow = 'Click to show';</script>
@@ -140,7 +140,7 @@
   
   
   
-    <p class="title logo__title">jaxprop v0.3.1 documentation</p>
+    <p class="title logo__title">jaxprop v0.4.0 documentation</p>
   
 </a></div>
         <div class="sidebar-primary-item">
@@ -411,8 +411,14 @@ document.write(`
 </li>
       <li><a href="source/api/jaxprop.coolprop.core_calculations.html#jaxprop.coolprop.core_calculations.compute_dsdp_q">compute_dsdp_q() (in module jaxprop.coolprop.core_calculations)</a>
 </li>
+      <li><a href="source/api/jaxprop.coolprop.core_calculations.html#jaxprop.coolprop.core_calculations.compute_gruneisen">compute_gruneisen() (in module jaxprop.coolprop.core_calculations)</a>
+</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/api/jaxprop.coolprop.core_calculations.html#jaxprop.coolprop.core_calculations.compute_isothermal_joule_thomson">compute_isothermal_joule_thomson() (in module jaxprop.coolprop.core_calculations)</a>
+</li>
+      <li><a href="source/api/jaxprop.coolprop.core_calculations.html#jaxprop.coolprop.core_calculations.compute_joule_thomson">compute_joule_thomson() (in module jaxprop.coolprop.core_calculations)</a>
+</li>
       <li><a href="source/api/jaxprop.coolprop.core_calculations.html#jaxprop.coolprop.core_calculations.compute_properties">compute_properties() (in module jaxprop.coolprop.core_calculations)</a>
 </li>
       <li><a href="source/api/jaxprop.coolprop.core_calculations.html#jaxprop.coolprop.core_calculations.compute_properties_1phase">compute_properties_1phase() (in module jaxprop.coolprop.core_calculations)</a>
